# archive-search

./: .env  .env.example  README.md  pyproject.toml
.cursor/plans/: archive_search_web_app_e2f06472.plan.md
archive_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: INSTALL.md
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css
scripts/: create_vector_index.py
src/: __init__.py
src/api/: deps.py  main.py
src/api/routers/: search.py  sessions.py
src/api/services/: search.py  session_store.py
src/indexer/: __init__.py  __main__.py  cli.py  extract_links.py  fetch_groups.py  fetch_linked.py  index_pipeline.py
src/shared/: __init__.py  chunking.py  config.py  db.py  embeddings.py  embeddings_ollama.py  embeddings_openai.py  embeddings_sentence_transformers.py  models.py
src/utilities/: mainpage-scraping.ipynb
